opam-version: "2.0"
synopsis: "Transport Layer Security purely in OCaml, Async layer"
description: "Tls-async provides Async-friendly tls bindings"
maintainer: [
  "Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"
]
authors: [
  "David Kaloper <david@numm.org>"
  "Hannes Mehnert <hannes@mehnert.org>"
  "Eric Ebinger <github@eric.theebingers.com>"
  "Calascibetta Romain <romain.calascibetta@gmail.com>"
]
license: "BSD-2-Clause"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-tls"
doc: "https://mirleft.github.io/ocaml-tls/doc"
bug-reports: "https://github.com/mirleft/ocaml-tls/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0"}
  "tls" {= version}
  "x509" {>= "0.14.0"}
  "ptime" {>= "0.8.1"}
  "async" {>= "v0.16"}
  "async_unix" {>= "v0.16"}
  "core" {>= "v0.16"}
  "cstruct-async"
  "ppx_jane" {>= "v0.16"}
  "mirage-crypto-rng-async"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirleft/ocaml-tls.git"
