opam-version: "2.0"
synopsis: "Transport Layer Security purely in OCaml - Eio"
description: """\
Transport Layer Security (TLS) is probably the most widely deployed security
protocol on the Internet. It provides communication privacy to prevent
eavesdropping, tampering, and message forgery. Furthermore, it optionally
provides authentication of the involved endpoints. TLS is commonly deployed for
securing web services ([HTTPS](http://tools.ietf.org/html/rfc2818)), emails,
virtual private networks, and wireless networks.

TLS uses asymmetric cryptography to exchange a symmetric key, and optionally
authenticate (using X.509) either or both endpoints. It provides algorithmic
agility, which means that the key exchange method, symmetric encryption
algorithm, and hash algorithm are negotiated.

Read [further](https://nqsb.io) and our [Usenix Security 2015 paper](https://usenix15.nqsb.io)."""
maintainer: [
  "Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"
]
authors: "Thomas Leonard"
license: "BSD-2-Clause"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-tls"
doc: "https://mirleft.github.io/ocaml-tls/doc"
bug-reports: "https://github.com/mirleft/ocaml-tls/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.0"}
  "tls" {= version}
  "mirage-crypto-rng" {>= "0.11.2"}
  "mirage-crypto-rng-eio" {>= "0.11.2" & with-test}
  "x509" {>= "0.15.0"}
  "eio" {>= "0.12"}
  "eio_main" {>= "0.12" & with-test}
  "mdx" {with-test}
  "crowbar" {>= "0.2.1" & with-test}
  "logs" {>= "0.7.0" & with-test}
  "ptime" {>= "1.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "macos"}
]
dev-repo: "git+https://github.com/mirleft/ocaml-tls.git"
