opam-version: "2.0"
synopsis: "Transport Layer Security purely in OCaml, Lwt layer"
description:
  "Tls-lwt provides an effectful Tls_lwt module to be used with Lwt."
maintainer: [
  "Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"
]
authors: [
  "David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>"
]
license: "BSD-2-Clause"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-tls"
doc: "https://mirleft.github.io/ocaml-tls/doc"
bug-reports: "https://github.com/mirleft/ocaml-tls/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0"}
  "tls" {= version}
  "mirage-crypto-rng-lwt" {>= "0.11.0" & < "1.0.0"}
  "x509" {>= "0.15.0"}
  "lwt" {>= "5.7.0"}
  "cmdliner" {>= "1.1.0"}
  "ptime" {>= "0.8.1"}
  "randomconv" {with-test & < "0.2.0"}
]
conflicts: [
  "result" {< "1.5"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirleft/ocaml-tls.git"
