opam-version: "2.0"
synopsis: "Transport Layer Security purely in OCaml, MirageOS layer"
description: """\
Tls-mirage provides an effectful FLOW module to be used in the MirageOS
ecosystem."""
maintainer: [
  "Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"
]
authors: [
  "David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>"
]
license: "BSD-2-Clause"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-tls"
doc: "https://mirleft.github.io/ocaml-tls/doc"
bug-reports: "https://github.com/mirleft/ocaml-tls/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0"}
  "tls" {= version}
  "x509" {>= "0.13.0"}
  "fmt" {>= "0.8.7"}
  "lwt" {>= "3.0.0"}
  "mirage-flow" {>= "4.0.0"}
  "mirage-kv" {>= "3.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "ptime" {>= "0.8.1"}
  "mirage-crypto"
  "mirage-crypto-pk"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirleft/ocaml-tls.git"
